tests/baselines/reference/generatorTypeCheck38(strict=true).errors.txt
generatorTypeCheck38.ts(1,5): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
generatorTypeCheck38.ts(1,5): error TS7034: Variable 'yield' implicitly has type 'any' in some locations where its type cannot be determined.
generatorTypeCheck38.ts(4,19): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
generatorTypeCheck38.ts(4,19): error TS7005: Variable 'yield' implicitly has an 'any' type.


==== generatorTypeCheck38.ts (4 errors) ====
    var yield;
        ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
        ~~~~~
!!! error TS7034: Variable 'yield' implicitly has type 'any' in some locations where its type cannot be determined.
    function* g() {
        yield 0;
        var v: typeof yield;
                      ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
                      ~~~~~
!!! error TS7005: Variable 'yield' implicitly has an 'any' type.
    }